# Translation

./: .gitignore  CMakeLists.txt  README_NDD.md  VolcengineTranslationNDD.pro  build.bat  build_ndd.bat
.github/workflows/: build-and-release.yml  build-ndd-plugin.yml
include/: ApiClient.h  ConfigStorage.h  NddPluginInterface.h  TranslationCore.h  TranslationResult.h  VolcengineTranslate.h
include/PluginCore/: ConfigManager.h  HttpClient.h  SignatureGenerator.h  TranslationEngine.h  TranslationResult.h
ndd108/include/: pluginGl.h
ndd108/plugin/: rcglobal.h
ndd108/plugin/ndd108tool/: draglineedit.cpp  draglineedit.h  encodetrans.cpp  encodetrans.h  encodetrans.ui  filecutunion.cpp  filecutunion.h  filecutunion.ui  filelistwin.cpp  filelistwin.h  filelistwin.ui  fullhalfangle.cpp  fullhalfangle.h  fullhalfangle.ui  instanceobj.cpp  instanceobj.h  maintool.cpp  maintool.h  maintool.ui  mocinclude.opt  ndd108tool.pro  ndd108tool.qtvscr  ndd108tool.vcxproj  ndd108tool.vcxproj.filters  ndd108toolexport.cpp  progresswin.cpp  progresswin.h  progresswin.ui  renamewin.cpp  renamewin.h  renamewin.ui  timestamptrans.cpp  timestamptrans.h  timestamptrans.ui  tradsimptrans.cpp  tradsimptrans.h  tradsimptrans.ui  volcengineapi.cpp  volcengineapi.h  volcenginetransconfig.cpp  (+5 more)
ndd108/qscint/src/: PlatQt.cpp  qscicommand.cpp  qscilexer.cpp  qscilexerapdl.cpp  qscilexercsharp.cpp  qscilexergcode.cpp  qscilexerglobal.cpp  qscilexerhtml.cpp  qscilexeridl.cpp  qscilexerintelhex.cpp  qscilexerjavascript.cpp  qscilexerlisp.cpp  qscilexerlog.cpp  qscilexernsis.cpp  qscilexerpowershell.cpp  qscilexerrust.cpp  qscilexertext.cpp  qscilexervb.cpp  qscilexerxml.cpp  (+3 more)
src/: ApiClient.cpp  ConfigStorage.cpp  ConfigWindow.cpp  NddPluginMain.cpp  SignatureGenerator.cpp  TranslationCore.cpp  VolcengineTranslate.cpp
src/PluginCore/: ConfigManager.cpp  HttpClient.cpp  SignatureGenerator.cpp  TranslationEngine.cpp
(+24 files in other folders)
